2003-05-29  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Improve layout of recent changes to preference dialog.
	
2003-05-28  Shailesh Mittal <shailesh.mittal@wipro.com>

 	* popcheck.c:
 	(have_ipv6): Added to check for runtime IPv6 support.
 	(get_server_port): Modified to pick the port out of IPv6 formatted
 	host-port string.
 	(get_server_hostname): Modified to extract the hostname or address
 	out of IPv6 formatted ([host]:port) host-port string.
 	(connect_socket): Modified to deal with IPv6 addresses as well.

2003-05-28  Kevin Vandersloot <kfv101@psu.edu>

	* popcheck.c: up to timeout to 2 minutes so that checking doesn't fail if
	under heavy loads. Should fix bug #91195

2003-05-26 Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	Patch by: Deepa Natarajan  <deepa.natarajan@wipro.com>

        * mailcheck.c, mailcheck.schemas.in: Do a base64 encode
        of the remote_password and store it in a new gconf key
        "remote_encrypted_password", if store password checkbox
        is enabled. So that we dont store the password in plain
        text! Fixes Bug #99801

2003-05-25  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: change behavior and pref so that when applet is clicked just
	stop animation. Previously there wasn't a way to actually set the number of unread
	mails to zero and hence the pref didn't make any sense. Fixes bug #112914. Also
	if no mail dir is located then set it to the user mail dir. Don't quit the applet if
	USER can be found

2003-05-22  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Correct grammar and capitalization for a few error messages.

2003-05-22  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: Make the update interval spins behave more sensibaly my making
	1 sec the min. Fixes bug #86840. Also remove unused variable from last commit

2003-05-22  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: don't pop up an error dialog on mail check failure. Just indicate in