@@ -1,3 +1,7 @@
+2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* mailcheck.c:  Convert "when clicked" to "when double clicked".
+	
 2003-05-29  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* mailcheck.c:  Improve layout of recent changes to preference dialog.
